--- a/style.css
+++ b/style.css
@@ -77,8 +77,8 @@ body {
 
  .update-section {
     position: fixed;
-    top: 10px; /* Ajusta según sea necesario para la distancia desde la parte superior */
-    right: 10px; /* Ajusta según sea necesario para la distancia desde la derecha */
+    top: 10px; 
+    right: 10px; 
     padding: 15px;
     border: 1px solid #ccc;
     border-radius: 8px;
